guides/grails-database-migration/v3/guide/installDatabase.adoc
=== Create a MySQL Database

Let's setup a physical database with MySql, instead of relying on the default H2 in memory database.

- Go to http://www.mysql.com/downloads[MySql] to install a database
- Create your admin access with id of `root` and password `root`
- Open the MySql Command Line Client

Run these commands in the command line client in order to create and use the database. The `show tables` command should
return an empty set.

=== Setup Grails to use a MySQL database 

[source, bash]
----
> create database dbmigration character set utf8 collate utf8_general_ci;
> use dbmigration;
> show databases;
> show tables;
----

Now we need to configure the Grails application to point to the new `dbmigration` database. We will be editing
the `build.gradle` and `application.yml` files.

[source, groovy]
.build.gradle
----
dependencies {
...
include::../snippets/build.gradle[tags=mysqlConnector]
...
}
----

[source, yaml]
.grails-app/conf/application.yml
----
include::../snippets/grails-app/conf/application.yml[tags=dataSource]
include::../snippets/grails-app/conf/application.yml[tags=dbUrl]
----

<1> `dbCreate` defines whether we want to auto-generate the database from the domain model. We set it to `none` since we are going to manage the 
management of the database schema with Grails Database Migration Plugin. 